--- a/index.html
+++ b/index.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
-    <link rel="stylesheet" href="css/styles.css">
     <title>MundoEco | Inicio </title>
+    <meta name="description" content="writing blog webpage">
+
+    <!-- Preload -->
+    <link rel="preload" href="css/styles.css" as="style">
+    <link rel="stylesheet" href="css/styles.css">
+
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" crossorigin="crossorigin" as="style">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
+
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" as="style">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" as="style">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> 
+    
 </head>
 <body>
     <!-- Header -->
@@ -125,7 +136,10 @@
             </div>
             <div class="row">
                 <div class="col-md-5">
-                    <img src="/img/acciones.jpg" alt="" class="img-fluid rounded-5">
+                    <picture>
+                        <source loading="lazy" srcset="/img/acciones.webp" type="image/webp" class="img-fluid rounded-5">
+                        <img src="/img/acciones.jpg" alt="" class="img-fluid rounded-5">
+                    </picture>
                 </div>
                 <div class="col-md-7">
                     <ul class="list-unstyled mt-2">
@@ -189,7 +203,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5" data-aos="fade-right">
-                    <img src="/img/contactanos.jpg" alt="" class="img-fluid rounded-5">
+                    <picture>
+                        <source loading="lazy" srcset="/img/contactanos.webp" type="image/webp" class="img-fluid rounded-5">
+                        <img src="/img/contactanos.jpg" alt="" class="img-fluid rounded-5">
+                    </picture>
                 </div>
                 <div class="col-md-7" data-aos="fade-left">
                     <h2 class="my-4 text-center">¿Te interesa ser parte del <span class="text-success">cambio</span>? ¡Contáctanos!</h2>
@@ -228,7 +245,7 @@
 
     </footer>
 
-   
+        <script src="/js/modernizr.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
         <script>
